tests/samples/positive/types/move_copyable.ax
module move_copyable;

fn main() -> i32 {
    let value: i32 = 1;
    return move(value);
}
