tests/samples/negative/types/literal_invalid_integer_suffix.ax
module literal_invalid_integer_suffix;

fn main() -> i32 {
    let value = 1f32;
    return value;
}
